plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.13'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id "org.sonarqube" version "4.4.1.3373"
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'MoNew'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

jacoco {
    toolVersion = "0.8.11"
}

dependencies {
    // 1. Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // 2. Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

    // 3. MapStruct & Lombok
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // 4. QueryDSL
    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // 5. DB & Env & AWS
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
    implementation 'software.amazon.awssdk:s3:2.20.10'
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.0'// 기존 implementation 'org.flywaydb:flyway-core' 를 지우고 아래 두 줄로 교체
    implementation 'org.flywaydb:flyway-core:10.10.0'
    implementation 'org.flywaydb:flyway-database-postgresql:10.10.0'

    // 6. Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.batch:spring-batch-test'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'com.rometools:rome:2.1.0'
    implementation 'org.jsoup:jsoup:1.16.1'
}

sonar {
    properties {
        property "sonar.projectKey", "seunghyeonjeon57-dot_sb9-MoNew-team4"
        property "sonar.organization", "seunghyeonjeon57-dot"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.language", "java"
        property "sonar.sourceEncoding", "UTF-8"

        // [핵심] 분석 대상 소스 코드 및 컴파일된 바이너리 경로 명시
        property "sonar.sources", "src/main/java"
        property "sonar.java.binaries", "${layout.buildDirectory.get()}/classes/java/main"

        // [핵심] JaCoCo XML 리포트 절대 경로 지정
        property "sonar.coverage.jacoco.xmlReportPaths", "${layout.buildDirectory.get()}/reports/jacoco/test/jacocoTestReport.xml"

        // [핵심] 제외 패턴 통합 관리 (Notification 포함 모든 잔당 제거)
        def exclusionPatterns = [
                "**/dto/**",
                "**/entity/**",
                "**/mapper/**",
                "**/global/**",
                "**/config/**",
                "**/exception/**",
                "**/*Application*",
                "**/Q*",
                "**/*Notification*"
        ].join(",")

        property "sonar.exclusions", exclusionPatterns
        property "sonar.coverage.exclusions", exclusionPatterns
    }
}

// 테스트 실행 설정
test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport // 테스트 완료 후 JaCoCo 리포트 생성 강제
}

// JaCoCo 리포트 생성 및 분석 제외 설정
jacocoTestReport {
    dependsOn test
    reports {
        html.required = true
        xml.required = true // SonarCloud 분석을 위해 XML은 반드시 true여야 함
    }

    // JaCoCo 리포트 결과물 자체에서도 특정 클래스 제외
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    "**/dto/**",
                    "**/entity/**",
                    "**/mapper/**",
                    "**/global/**",
                    "**/config/**",
                    "**/*Application*",
                    "**/Q*"
            ])
        }))
    }

    // 리포트 생성 후 경로 출력 (디버깅용)
    doLast {
        println "------------------------------------------------------------"
        println "✅ JaCoCo XML Report: ${layout.buildDirectory.get()}/reports/jacoco/test/jacocoTestReport.xml"
        println "------------------------------------------------------------"
    }
}

// 소나 분석 전에 반드시 JaCoCo 리포트가 먼저 생성되도록 순서 보장
tasks.named('sonar').configure {
    dependsOn jacocoTestReport
}